--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,7 @@
   <div class="p2 wrap">
     <div class="measure mt1 center">
       <small>
-        creator and host <a href="http://godrix.com">Carlos Godrix</a> (<a href="https://twitter.com/cgodrix">@cgodrix</a>). Site powered by <a href="https://tinypress.co/">Tinypress</a>.<br>
-        &lt;/&gt; available on <a href="https://github.com/commitcast/commitcast.github.io">Github</a>.
+        creator and host <a href="http://godrix.com">Carlos Godrix</a> (<a href="https://twitter.com/cgodrix">@cgodrix</a>). Site powered by <a href="https://github.com/commitcast/commitcast.github.io">Github</a>.
       </small>
     </div>
   </div>
